--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Momentum</title>
   </head>
   <body>
-    <div class="hello">
-      <h1>Click me!</h1>
-    </div>
-    <div class="hello">
-      <h1>Grab me!</h1>
-    </div>
-    <div class="hello">
-      <h1>Grab me!</h1>
-    </div>
-
-    <script src="prac.js"></script>
+    <form id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <button>Log In</button>
+    </form>
+    <script src="app.js"></script>
   </body>
 </html>
