--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Momentum</title>
   </head>
   <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
       <input
         required
         maxlength="15"
         type="text"
         placeholder="What is your name?"
       />
-      <button>Log In</button>
+      <input type="submit" value="Log in" />
     </form>
+    <h1 class="hidden" id="greeting"></h1>
     <script src="app.js"></script>
   </body>
 </html>
