--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Momentum</title>
   </head>
   <body>
+    <!-- login -->
     <form class="hidden" id="login-form">
       <input
         required
@@ -17,9 +18,18 @@
       />
       <input type="submit" value="Log in" />
     </form>
+    <!-- clock -->
     <h2 id="clock">00:00:00</h2>
+    <!-- greetings -->
     <h1 class="hidden" id="greeting"></h1>
+    <!-- quote -->
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
   </body>
 </html>
