feat : Christmas countdown clock

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Momentum</title>
   </head>
   <body>
+    <!-- challenge_clock -->
+    <h1>Time Until Christmas Eve</h1>
+    <h2 class="js-clock"></h2>
     <!-- clock -->
     <h2 id="clock">00:00:00</h2>
     <!-- login -->
@@ -43,5 +46,6 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/challenge_clock.js"></script>
   </body>
 </html>
