--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
       <span></span>
       <span></span>
     </div>
-
+    <!-- weather -->
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/weather.js"></script>
     <!-- <script src="js/challenge_countdown-clock.js"></script> -->
   </body>
 </html>
