--- a/index.html
+++ b/index.html
@@ -8,51 +8,42 @@
     <title>Momentum</title>
   </head>
   <body>
-    <!-- challenge_clock -->
-    <!-- <h1>Time Until Christmas Eve</h1>
-    <h2 class="js-clock"></h2> -->
+    <div class="container">
+      <h2 id="clock">00:00</h2>
+      <form class="hidden" id="login-form">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        />
+        <input type="submit" value="Log in" />
+      </form>
+      <h1 class="hidden" id="greeting"></h1>
+      <form id="todo-form">
+        <input
+          type="text"
+          placeholder="What is your main focus for today?"
+          required
+        />
+      </form>
+      <ul id="todo-list"></ul>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <script src="js/background.js"></script>
 
-    <!-- clock -->
-    <h2 id="clock">00:00:00</h2>
-    <!-- login -->
-    <form class="hidden" id="login-form">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log in" />
-    </form>
-    <!-- greetings -->
-    <h1 class="hidden" id="greeting"></h1>
-    <!-- todo list -->
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and press enter" required />
-    </form>
-    <ul id="todo-list">
-      <!-- <li>
-        <span>text</span>
-        <button>X</button>
-      </li> -->
-    </ul>
-    <!-- quote -->
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
-    <!-- weather -->
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/api.js"></script>
     <script src="js/weather.js"></script>
-    <!-- <script src="js/challenge_countdown-clock.js"></script> -->
   </body>
 </html>
