--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Momentum</title>
   </head>
   <body>
+    <div id="background-image" />
     <div class="container">
       <h2 id="clock">00:00</h2>
       <form class="hidden" id="login-form">
@@ -37,13 +38,13 @@
         <span></span>
       </div>
     </div>
-    <script src="js/background.js"></script>
-
+    <script type="module" src="js/index.js"></script>
+    <!-- <script src="js/background.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/api.js"></script>
-    <script src="js/weather.js"></script>
+    <script src="js/weather.js"></script> -->
   </body>
 </html>
